lib/tests/fixtures/compiler/parser/next_in_application.baseline
Error: next_in_application.pp:3:9: next statement cannot be used inside an application statement.
  next
  ^~~~
