lib/tests/fixtures/compiler/parser/next_in_application.pp
application foo() {
    if true {
        next
    }
}
